sroll modal if too big and fix customer missing address issue

--- a/src/components/orders/orders.css
+++ b/src/components/orders/orders.css
@@ -59,6 +59,8 @@
   flex-direction: column;
   text-align: start;
   gap: 10px;
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
 .modalContent p {
